welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: not found: value numsq
      if ((nums(i) == 6 && nums(i+1) == 6) || (nums(i)== 6 && numsq(i+1) == 7))
                                                              ^